@@ -1,4 +1,8 @@
 0.1.0
+Fixed double free bug in prefs.
+Toggle bookmark bar now affects all open files and is remembered in the prefs.
+Bookmarks can now be added/deleted by clicking on the icon in the bookmark bar.
+Added a bookmark bar.
 Added plea for money.
 Fixed not jumping to line when selecting goto define and file is not already open.
 
